--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
             </li>
             {% else %}
             <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" id="signup" href="/signup">Signup</a>
             </li>
             <li class="nav-item">
