--- a/templates/index.html
+++ b/templates/index.html
@@ -9,32 +9,32 @@
 <body>
     <nav class="navbar">
       <div class="container">
-        <ul class="navbar-nav">
+        <div class="navbar-nav">
            {% if current_user.is_authenticated %}
-          <li class="nav-item">
+          <span class="nav-item">
             <a class="nav-link" href="/">Home</a>
-          </li>
-            <li class="nav-item">
+          </span>
+            <span class="nav-item">
               <a class="nav-link" id="chat" href="/chat" method="GET">Chat</a>
-            </li>
-            <li class="nav-item">
+            </span>
+            <span class="nav-item">
               <a class="nav-link" id="profile" href="/profile">Profile</a>
-            </li>
-            <li class="nav-item">
+            </span>
+            <span class="nav-item">
               <a class="nav-link" id="logout" href="/logout">logout</a>
-            </li>
+            </span>
             {% else %}
-            <li class="nav-item">
+            <span class="nav-item">
               <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
+            </span>
+            <span class="nav-item">
               <a class="nav-link" id="signup" href="/signup">Signup</a>
-            </li>
-            <li class="nav-item">
+            </span>
+            <span class="nav-item">
               <a class="nav-link" id="login" href="/login">Login</a>
-            </li>
+            </span>
             {% endif %}
-          </ul>
+          </div>
         </div>
     </nav>
 
