--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
 
     <div>
       {% block content %}
-      <div class="elements" method="GET">
+      <!--div class="elements" method="GET">
         {% for i in User %}
         <span class="element check">
           <h1 id="connuser">{{ i.username }}</h1>
@@ -64,7 +64,7 @@
           <!--button type="submit" class="connect" id="connect" onclick = connect ({{ i.username }})>connect</button-->
         </span>
         {% endfor %}
-      </div>
+    </div-->
       {% endblock %}
   </div>
 </body>
